MVC proof of concept w/minimal restaurant displaying

--- a/WebReviewSite/WebReviewSite.Tests/WebReviewSite.Tests.csproj
+++ b/WebReviewSite/WebReviewSite.Tests/WebReviewSite.Tests.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework">
       <HintPath>..\packages\MSTest.TestFramework.1.1.17\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
@@ -99,6 +105,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ReviewSiteLogic\ReviewSiteLogic.csproj">
+      <Project>{9017f06a-e3ce-4eac-a220-15f488243dc6}</Project>
+      <Name>ReviewSiteLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WebReviewSite\WebReviewSite.csproj">
       <Project>{F94FF85A-12E0-4F60-B628-93FD3BC28B58}</Project>
       <Name>WebReviewSite</Name>
