--- a/WebReviewSite/WebReviewSite/WebReviewSite.csproj
+++ b/WebReviewSite/WebReviewSite/WebReviewSite.csproj
@@ -194,10 +194,13 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ListRestaurants.cshtml" />
+    <Content Include="Views\Home\ViewRestaurant.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\ContentView\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -211,6 +214,12 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ReviewSiteLogic\ReviewSiteLogic.csproj">
+      <Project>{9017f06a-e3ce-4eac-a220-15f488243dc6}</Project>
+      <Name>ReviewSiteLogic</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
