--- a/WebReviewSite/WebReviewSite.Tests/WebReviewSite.Tests.csproj
+++ b/WebReviewSite/WebReviewSite.Tests/WebReviewSite.Tests.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Models\TestContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -105,6 +106,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ReviewSiteData\ReviewSiteData.csproj">
+      <Project>{C117371C-AB33-4558-84F3-3ED283439FA2}</Project>
+      <Name>ReviewSiteData</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ReviewSiteLogic\ReviewSiteLogic.csproj">
       <Project>{9017f06a-e3ce-4eac-a220-15f488243dc6}</Project>
       <Name>ReviewSiteLogic</Name>
